@@ -1,3 +1,9 @@
+2014-12-24  Even Rouault  <even.rouault@spatialys.com>
+
+	* tools/tiff2pdf.c: fix buffer overflow on YCbCr JPEG compressed image.
+	Derived from patch by Petr Gajdos,
+	http://bugzilla.maptools.org/show_bug.cgi?id=2443
+
 2014-12-23  Even Rouault  <even.rouault@spatialys.com>
 
 	* libtiff/tif_dirread.c: In EstimateStripByteCounts(), check return code
